--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
     "express": "^5.1.0",
+    "mantine-form-zod-resolver": "^1.3.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
